--- a/scss/_font-face.scss
+++ b/scss/_font-face.scss
@@ -35,5 +35,5 @@
 
 @font-face {
   font-family: 'OratorStd Regular';
-  src: url('../font/OratorStd.otf');
+  src: url('../font/OratorStd.ttf');
 }
