--- a/scss/_media-lg.scss
+++ b/scss/_media-lg.scss
@@ -79,4 +79,12 @@
   .contact-us {
     padding: 60px 0;
   }
+
+  //footer
+
+  .footer {
+    &__main {
+      padding-bottom: 40px;
+    }
+  }
 }
