--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'mixin';
 @import 'common';
 @import 'master';
+@import 'ie-fix';
 @import 'media-lg';
 @import 'media-md';
 @import 'media-sm';
